* Modified default.bam so it can compile four server binaries on AMD64 with one command: with debug symbols and without, x86 and x86_64 (Fluxid) * Added unlimited hook - variable sv_endless_hook (Fluxid) * Added freezing boosters, both fast and slow (Fluxid) * Allow blocking user color change which blocks rainbowmod, variable sv_allow_color_change (Fluxid) * Three crash fixes (LemonFace, Fluxid; based on http://www.freelists.org/post/teeworlds/some-fixes ) * Block more than n connections from one ip, variable sv_max_connections (LemonFace) * Ban user with more than 3 rcon password tries for 5 minutes (LemonFace) * Fixed compilation with debug symbols (Fluxid) * Small style fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 *.py[co]
 .*.sw[po]
 *.o
+ddrace_srv_x86
+ddrace_srv_x86_64
+ddrace_srv_x86_64_d
+ddrace_srv_x86_d
+src/game/generated/g_protocol.cpp
+src/game/generated/g_protocol.hpp
+src/game/generated/gs_data.cpp
+src/game/generated/gs_data.hpp
+src/game/generated/nethash.c
